[gd_scene load_steps=9 format=1]

[ext_resource path="res://cars.gd" type="Script" id=1]
[ext_resource path="res://imgs/menucar.png" type="Texture" id=2]
[ext_resource path="res://imgs/bajaj.png" type="Texture" id=3]
[ext_resource path="res://imgs/backm.png" type="Texture" id=4]
[ext_resource path="res://imgs/selectcar.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource/name = "selectcar"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "car1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pilih/TextureButton:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.9 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 195, 175 ), Vector2( 365, 175 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("pilih/TextureButton:rect/rotation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 0.9, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 30.0, 10.0, 0.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "car2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pilih/TextureButton1:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 181, 262 ), Vector2( 361, 262 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("pilih/TextureButton1:rect/rotation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6, 0.9, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 30.0, 10.0, 0.0 ] }

[node name="cars" type="Node2D"]

script/script = ExtResource( 1 )

[node name="pilih" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="pilih"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 195.0
margin/top = 175.0
margin/right = 290.0
margin/bottom = 225.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="Sprite" type="Sprite" parent="pilih/TextureButton"]

transform/pos = Vector2( 43.5331, 22.7 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="TextureButton1" type="TextureButton" parent="pilih"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = 262.0
margin/right = 277.0
margin/bottom = 312.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[node name="Sprite" type="Sprite" parent="pilih/TextureButton1"]

transform/pos = Vector2( 43.5331, 22.7 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="back" type="TextureButton" parent="pilih"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 11.0
margin/right = 105.0
margin/bottom = 115.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="pilih"]

transform/pos = Vector2( -39.1899, 0 )
transform/scale = Vector2( 1.05849, 1 )
z/z = -9
polygon = Vector2Array( 170, 140, 650, 140, 650, 330, 170, 330 )
uv = Vector2Array(  )
color = Color( 0.191406, 0.174957, 0.174957, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D" type="Polygon2D" parent="."]

transform/pos = Vector2( -1.10803, 0 )
z/z = -10
polygon = Vector2Array( 0, 0, 800, 0, 800, 480, 0, 480 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.7319
transform/pos = Vector2( 396.473, 113.307 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/selectcar = SubResource( 1 )
next/selectcar = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "selectcar"

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="."]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/car1 = SubResource( 2 )
anims/car2 = SubResource( 3 )
next/car1 = ""
next/car2 = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="pilih/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="pilih/TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="pilih/back" to="." method="_on_TextureButton_2_pressed"]


